# dot_marketplace_file_server

./: .env  Cargo.toml  README.md  Rocket.toml
src/: main.rs
src/config/: mod.rs  nft_storage_config.rs
src/controller/: file_upload.rs
src/file_uploader/: mod.rs  nft_storage.rs
src/handler/: error_handler.rs  response.rs
src/service/: file_service.rs  mod.rs  nft_storage_service.rs
src/utils/: data_parser.rs
