[package]
name = "dot_marketplace_file_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
rocket-multipart-form-data = "0.10.0"
rocket-download-response = "0.5"
async-std = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13"
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["json"] }
dotenv = {version = "0.15.0"}